--- a/index.html
+++ b/index.html
@@ -4,31 +4,24 @@
 <head>
   <meta charset=utf-8 />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-  <title>Shagbark Seed and Mill Store Locator</title>
+  <title>Leaflet Store Locator</title>
+  <!--To do - ad opengraph metadata-->
   <!--Fonts-->
   <link href='https://fonts.googleapis.com/css?family=Londrina+Solid|Oswald:700|Archivo+Narrow|Source+Sans+Pro:400,600,700,900' rel='stylesheet' type='text/css'>
+  <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-locatecontrol/v0.43.0/css/font-awesome.min.css' rel='stylesheet' />
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <!--link rel="stylesheet" href="assets/leaflet/leaflet.css" />
-  <script src="assets/leaflet/leaflet.js"></script-->
   <!--Google Maps API NO Key!! -->
   <script src="https://maps.google.com/maps/api/js?v=3"></script>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.2/dist/leaflet.css" />
-  <script src="https://unpkg.com/leaflet@1.0.2/dist/leaflet.js"></script>
+  <!--Leaflet 1.0.3-->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" />
+  <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
+  <!--Leaflet Plugins-->
+  <link rel="stylesheet" type="text/css" href="assets/L.VisualClick.css" />
+  <script src="assets/L.VisualClick.js"></script>
   <script src='https://unpkg.com/leaflet.gridlayer.googlemutant@latest/Leaflet.GoogleMutant.js'></script>
   <script src='https://api.tiles.mapbox.com/mapbox.js/plugins/leaflet-omnivore/v0.2.0/leaflet-omnivore.min.js'></script>
   <script src='https://api.tiles.mapbox.com/mapbox.js/plugins/leaflet-hash/v0.2.1/leaflet-hash.js'></script>
-  <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-locatecontrol/v0.43.0/css/font-awesome.min.css' rel='stylesheet' />
-  <!-- leaflet search no longer used -->
-  <!--link rel="stylesheet" href="assets/leaflet-search/leaflet-search.src.css" />
-  <script src="assets/leaflet-search/leaflet-search.src.js"></script>--
-  <!--Leaflet Sidebar not used-->
-	<!--link href='assets/L.Control.Sidebar.css' rel='stylesheet' />
-	<script src='assets/L.Control.Sidebar.js'></script-->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-routing-machine/2.6.2/leaflet-routing-machine.min.js"></script>
-
-  <link rel="stylesheet" type="text/css" href="assets/L.VisualClick.css" />
-  <script src="assets/L.VisualClick.js"></script>
-
+  <!--script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-routing-machine/2.6.2/leaflet-routing-machine.min.js"></script-->
   <style>
     body {
       color: #404040;
@@ -44,6 +37,7 @@
       -moz-box-sizing: border-box;
       box-sizing: border-box;
     }
+
     h1 {
       font-size: 2em;
       margin: 0;
@@ -65,7 +59,7 @@
       position: absolute;
       width: 33.3333%;
       min-width: 200px;
-			max-width:400px;
+      max-width: 400px;
       height: 100%;
       top: 0;
       left: 0;
@@ -146,18 +140,18 @@
       background-color: gainsboro;
     }
 
-    ::-webkit-scrollbar {
+     ::-webkit-scrollbar {
       width: 3px;
       height: 3px;
       border-left: 0;
       background: rgba(0, 0, 0, 0.1);
     }
 
-    ::-webkit-scrollbar-track {
+     ::-webkit-scrollbar-track {
       background: none;
     }
 
-    ::-webkit-scrollbar-thumb {
+     ::-webkit-scrollbar-thumb {
       background: #00853e;
       border-radius: 0;
     }
@@ -173,38 +167,16 @@
       clear: both;
       visibility: hidden;
     }
+
     .leaflet-container .leaflet-marker-icon {
       cursor: pointer;
     }
-    /*
-    .leaflet-control-search .search-input {
-      display: block;
-      border: none;
-      font-size: large;
-      width: 95%;
-      height: auto;
-      margin: 5px 0;
-    }
 
-    .leaflet-control-search .search-cancel {
-      display: none!important;
-    }
-
-    .leaflet-control-search .search-button {
-      display: none;
-    }
-
-    .leaflet-control-search .search-tooltip {
-      position: relative;;
-      width: 98%;
-      background-color: white;
-    }*/
-
-    /*close button for store infor*/
     #searchbox {
       width: 100%;
-      height:36px;
+      height: 36px;
     }
+
     #search-input {
       font-size: 18px;
       width: 100%;
@@ -212,22 +184,24 @@
       box-shadow: 0 1px lightgray;
       border: none;
     }
+
     #closeButton {
       float: right;
     }
 
     #closeButton:hover,
-    :focus {
+     :focus {
       color: #b74042;
       cursor: pointer;
       /*padding: 5px;*/
     }
 
     #searchIcon:hover,
-    :focus {
+     :focus {
       color: #b74042;
       cursor: pointer;
     }
+
     #infoClose {
       float: right;
     }
@@ -237,39 +211,36 @@
       font-size: 26px;
       margin-top: 1px;
     }
-	 @media screen and (min-width:601px) and (max-width: 1199px) {
+
+    @media screen and (min-width:601px) and (max-width: 1199px) {
       .map {
-  			width: 66.6666%;
-			}
-    }
-    @media screen and (max-width:600px) {
-        .map {
-          margin-left:200px;
-          right: 0;
-          left: 0;
-        }
-        /*.sidebar {
-          display: none;
-        }
-        #map {
-          width: 100%;
-          margin: 0;
-        }*/
-    }
-		@media screen and (min-width: 1200px) {
-			.map {
-				left: 400px;
-				right: 0;
-			}
-		}
-		@media screen and (max-width:900px) {
-			h1 {
-         font-size: 1.2em;
+        width: 66.6666%;
       }
-			#searchIcon {
-				font-size: 16px;
-			}
-		}
+    }
+
+    @media screen and (max-width:600px) {
+      .map {
+        margin-left: 200px;
+        right: 0;
+        left: 0;
+      }
+    }
+
+    @media screen and (min-width: 1200px) {
+      .map {
+        left: 400px;
+        right: 0;
+      }
+    }
+
+    @media screen and (max-width:900px) {
+      h1 {
+        font-size: 1.2em;
+      }
+      #searchIcon {
+        font-size: 16px;
+      }
+    }
   </style>
 </head>
 
@@ -282,11 +253,13 @@
           <input type="text" id="search-input" autofocus/>
         </div>
       </div>
-      <div id="storeinfo"><i id="infoClose" class="fa fa-times fa-2x"></i><div id="infoDivInner"></div></div>
+      <div id="storeinfo"><i id="infoClose" class="fa fa-times fa-2x"></i>
+        <div id="infoDivInner"></div>
+      </div>
       <div id='listingDiv' class='listings'></div>
     </div>
     <div id='map' class='map'>
-      <!--Sidebar plugin---->
+      <!--Sidebar plugin no longer used ---->
       <!--div id="sidebar">
         <h1>Store Information and Products</h1>
       </div-->
@@ -296,6 +269,7 @@
     //basic map setup map and basemap
     var map = L.map('map')
       .setView([40.410976, -82.928835], 8);
+
     //L.hash(map);
     var cartodb = L.tileLayer('https://cartodb-basemaps-{s}.global.ssl.fastly.net/light_all/{z}/{x}/{y}.png', {
       attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a> &copy; <a href="http://cartodb.com/attributions">CartoDB</a>',
@@ -304,11 +278,10 @@
     var road = L.gridLayer.googleMutant({
       type: 'roadmap' // valid values are 'roadmap', 'satellite', 'terrain' and 'hybrid'
     }).addTo(map);
+
     //end basic map
 
     //show search on search icon click
-
-
     //global variables - could add more here
     var locationLat = [];
     var locationLng = [];
@@ -318,15 +291,13 @@
     var toggleSearch = document.getElementById('searchIcon');
     var hasCircle = 0;
     var circle = [];
-
     //close store infor when x is clicked
     $("#infoClose").click(function() {
       $("#storeinfo").hide();
       if (map.hasLayer(circle)) {
         map.removeLayer(circle);
       }
-    });    
-
+    });
     var listings = document.getElementById('listingDiv');
     var stores = L.geoJson().addTo(map);
     var storesData = omnivore.csv('https://dl.dropboxusercontent.com/s/1lv4zhzatv6sd8n/ShagbarkStores.csv', null, stores);
@@ -337,10 +308,8 @@
         siblings[i].className = siblings[i].className
           .replace(/active/, '').replace(/\s\s*$/, '');
       }
-
       el.className += ' active';
     }
-
     storesData.on('ready', function() {
       toggleSearch.onclick = function() {
         var s = document.getElementById('searchbox');
@@ -348,30 +317,31 @@
           s.style.display = 'none';
           toggleSearch.innerHTML = '<i class="fa fa-search"></i>';
           $("#search-input").val("");
+
           //search.collapse();
           document.getElementById('storeinfo').style.display = 'none';
           $('.item').show();
-        }else{
+        } else {
           toggleSearch.innerHTML = '<i class="fa fa-times"></i>';
           s.style.display = 'block';
+
           //attempt to autofocus search input field when opened
           $('#search-input').focus();
         }
       };
-
       stores.eachLayer(function(layer) {
 
-      //New jquery search
-      $('#searchbox').on('change paste keyup', function(){
+        //New jquery search
+        $('#searchbox').on('change paste keyup', function() {
           var txt = $('#search-input').val();
-          $('.item').each(function(){
-             if($(this).text().toUpperCase().indexOf(txt.toUpperCase()) != -1){
-                $(this).show();
-             }else{
-                $(this).hide();
-             }
+          $('.item').each(function() {
+            if ($(this).text().toUpperCase().indexOf(txt.toUpperCase()) != -1) {
+              $(this).show();
+            } else {
+              $(this).hide();
+            }
           });
-      });
+        });
 
         // Shorten layer.feature.properties to just `prop` so we're not
         // writing this long form over and over again.
@@ -383,42 +353,34 @@
         // Each marker on the map.
         var popup = '<h2 style="margin-bottom:5px;">' + prop.name + '</h2><small class="quiet">' + prop.products +
           '</small><br /><span id="directions"><a href="https://www.google.com/maps/dir//?saddr=My+Location' + '&daddr=' + layerx + ',' + layery + '" target="_blank">Directions</a></span>';
-
         var listing = listings.appendChild(document.createElement('div'));
         listing.className = 'item';
-
         var link = listing.appendChild(document.createElement('a'));
         link.href = '#';
         link.className = 'title';
-
         link.innerHTML = prop.name;
         if (prop.products) {
           link.innerHTML += '<br /><small class="quiet">' + prop.products + '</small>';
-          //        popup += '<br /><small class="quiet">' + prop.products + '</small>';
         }
-
         var details = listing.appendChild(document.createElement('div'));
         details.innerHTML = prop.address;
-        /*      if (prop.phone) {
-                details.innerHTML += ' &middot; ' + prop.phoneFormatted;
-              }
-        */
         var linkClick = 0;
         link.onclick = function() {
           linkClick = 1;
           setActive(listing);
+
           //console.log(locationLat);
           // When a menu item is clicked, animate the map to center
           // its associated layer and open its popup.
           map.setView(layer.getLatLng(), 16);
           layer.fire('click');
-          infoDiv.style.display = 'block';   
+          infoDiv.style.display = 'block';
+
           //layer.openPopup();
           //		    sidebar.setContent(popup);
           //		    sidebar.show();
           return false;
         };
-
         // Marker interaction
         layer.on('click', function(e) {
           //console.log(e.latlng);
@@ -433,31 +395,25 @@
             map.removeLayer(circle);
             hasCircle = 0;
           }
-
           // 1. center the map on the selected marker.
           //map.setView(layer.getLatLng(), map.getZoom());
-
           // use this forr polygons and lines - map.panTo(layer.getBounds().getCenter());
           // 2. Set active the markers associated listing.
           setActive(listing);
-
           // sidebar.setContent(popup);
           infoDiv.style.display = "block";
           infoDivInner.innerHTML = popup;
-
           // sidebar.show();
           xy = layer.getLatLng();
-
           setTimeout(function() {
-             circle = new L.circleMarker(xy, {
-                color: 'red',
-                fillColor: '#f03',
-                fillOpacity: 0.5,
-                radius: 50,
-              }).addTo(map);
-           }, 200);
+            circle = new L.circleMarker(xy, {
+              color: 'red',
+              fillColor: '#f03',
+              fillOpacity: 0.5,
+              radius: 50,
+            }).addTo(map);
+          }, 200);
         });
-
         //popup += '</div>';
         //layer.bindPopup(popup);
         layer.setIcon(L.icon({
@@ -468,16 +424,13 @@
         }));
       }); //end eachLayer
     }); //end on ready function
-
     //setTimeout(function() {
     map.locate({
       setVIew: true,
       maxZoom: 10
-
     });
     //sidebar.hide();
     //}, 500);
-
     map.on('click', function() {
       if (map.hasLayer(circle)) {
         ////console.log('circle');
