--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
       maxZoom: 10
     });
     
-    if (map.locationFound()) {
+    if (map.locationfound()) {
       console.log(true) 
     }
         
