--- a/index.html
+++ b/index.html
@@ -440,9 +440,9 @@
         fillOpacity: 0.2,
         radius: 30
       }).addTo(map);
-      var nearbyStores = turf.within(userLocation.toGeoJSON(), stores.toGeoJSON());
-      console.log(nearbyStores);  
-      nearbyStores.addTo(map);
+      //var nearbyStores = turf.within(userLocation.toGeoJSON(), stores.toGeoJSON());
+      //console.log(nearbyStores);  
+      //nearbyStores.addTo(map);
     })
         
         
