--- a/index.html
+++ b/index.html
@@ -440,6 +440,7 @@
         fillOpacity: 0.2,
         radius: 30
       }).addTo(map);
+      userLocation.setRadius(8046.72);
       //var nearbyStores = turf.within(userLocation.toGeoJSON(), stores.toGeoJSON());
       //console.log(nearbyStores);  
       //nearbyStores.addTo(map);
