--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
     
     map.on('locationfound', function(e) {
       console.log(e);
-      var userLocation = new L.Circle(e.latlng, 8046.72 {
+      var userLocation = new L.Circle(e.latlng, 8046.72, {
         color: 'cadetblue',
         fillColor: 'cadetblue',
         fillOpacity: 0.2,
