--- a/index.html
+++ b/index.html
@@ -441,14 +441,14 @@
       }).addTo(map);
       userLocation.setRadius(8046.72);
       var point = turf.point([e.longitude,e.latitude]);
+      var within = turf.featurecollection(stores.eachLayer(function(store) {
+        if (turf.distance(store.toGeoJSON(), point, 'miles') <= 5) return true;
+      }));
+      console.log(within);
       var within2 = turf.featurecollection(stores.eachLayer(function(store) {
         if (turf.distance(store, point, 'miles') <= 5) return true;
       }));
       console.log(within2);
-      var within = turf.featurecollection(stores.forEach(function(store) {
-        if (turf.distance(store.toGeoJSON(), point, 'miles') <= 5) return true;
-      }));
-      console.log(within);
       //var nearbyStores = turf.within(userLocation.toGeoJSON(), stores.toGeoJSON());
       //console.log(nearbyStores);  
       //nearbyStores.addTo(map);
