--- a/index.html
+++ b/index.html
@@ -442,6 +442,7 @@
       userLocation.setRadius(8046.72);
       var point = turf.point([e.longitude,e.latitude]);
       var within = turf.featurecollection(stores.eachLayer(function(store) {
+        console.log(store);
         if (turf.distance(store.toGeoJSON(), point, 'miles') <= 5) return true;
       }));
       console.log(within);
