--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
       }));
       if (!within.length && within.length > 0) {
         var numStores = within.length;
-        $("#infoDivInner").innerHTML = "Number of stores within 10 miles of your location: " + numStores";
+        $("#infoDivInner").innerHTML = ("Number of stores within 10 miles of your location: " + numStores);
       }
       console.log(within);
       //var nearbyStores = turf.within(userLocation.toGeoJSON(), stores.toGeoJSON());
