--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
         var numStores = within.length;
         $("#infoDivInner").innerHTML = ("Number of stores within 10 miles of your location: " + numStores);
       }
-      console.log(within.length);
+      console.log(within.feature.length);
       //var nearbyStores = turf.within(userLocation.toGeoJSON(), stores.toGeoJSON());
       //console.log(nearbyStores);  
       //nearbyStores.addTo(map);
