--- a/index.html
+++ b/index.html
@@ -445,11 +445,11 @@
         console.log(store);
         if (turf.distance(turf.feature(store.feature.geometry), point, 'miles') <= 100) return true;
       }));
+      console.log(within);
       if (within.feature.length && within.feature.length > 0) {
         var numStores = within.length;
         $("#infoDivInner").innerHTML = ("Number of stores within 10 miles of your location: " + numStores);
       }
-      console.log(within.feature.length);
       //var nearbyStores = turf.within(userLocation.toGeoJSON(), stores.toGeoJSON());
       //console.log(nearbyStores);  
       //nearbyStores.addTo(map);
