--- a/index.html
+++ b/index.html
@@ -446,13 +446,11 @@
         if (turf.distance(turf.feature(store.feature.geometry), point, 'miles') <= 100) return true;
       }));
       console.log(within);
-      if (within.feature.length && within.feature.length > 0) {
+      console.log(within.features.length);
+      if (within.features.length && within.features.length > 0) {
         var numStores = within.length;
         $("#infoDivInner").innerHTML = ("Number of stores within 10 miles of your location: " + numStores);
       }
-      //var nearbyStores = turf.within(userLocation.toGeoJSON(), stores.toGeoJSON());
-      //console.log(nearbyStores);  
-      //nearbyStores.addTo(map);
     })
       
     }); //end on ready function
