--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
         if (turf.distance(turf.feature(store.feature.geometry), point, 'miles') <= 100) return true;
       }));
       console.log(within);
-      console.log((within.features).length);
+      console.log((within.features._layers).length);
       if (within.features.length && within.features.length > 0) {
         var numStores = within.length;
         $("#infoDivInner").innerHTML = ("Number of stores within 10 miles of your location: " + numStores);
