--- a/index.html
+++ b/index.html
@@ -434,6 +434,8 @@
     map.on('locationfound', function(e) {
       console.log(e);
       //8046.72 meters = 5 miles
+      var radius = 8000;
+      var rmiles = (radius/1609.34).toFixed(0); 
       var userLocation = new L.Circle(e.latlng, 80000, {
         color: 'cadetblue',
         fillColor: 'cadetblue',
@@ -443,15 +445,13 @@
       var point = turf.point([e.longitude,e.latitude]);
       var within = turf.featureCollection(stores.eachLayer(function(store) {
         console.log(store);
-        if (turf.distance(turf.feature(store.feature.geometry), point, 'miles') <= 100) return true;
+        if (turf.distance(turf.feature(store.feature.geometry), point, 'miles') <= rmiles) return true;
       }));
       console.log(within);
-      var size = Object.keys(within.features._layers);
+      var size = Object.keys(within.features._layers).length;
       console.log(size);
-      if (within.features.length && within.features.length > 0) {
-        var numStores = within.length;
-        $("#infoDivInner").innerHTML = ("Number of stores within 10 miles of your location: " + numStores);
-      }
+      $("#infoDivInner").innerHTML = ("Number of stores within " + rmiles + " miles of your location: " + size);
+      $("#storeinfo).show();
     })
       
     }); //end on ready function
