--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
       var size = Object.keys(within.features._layers).length;
       console.log(size);
       $("#infoDivInner").innerHTML = ("Number of stores within " + rmiles + " miles of your location: " + size);
-      $("#storeinfo).show();
+      $("#storeinfo").show();
     })
       
     }); //end on ready function
