--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
       console.log(within);
       var size = Object.keys(within.features._layers).length;
       console.log(size);
-      $("#infoDivInner").HTML("Location found!<br>Number of store(s) within " + rmiles + " miles of your location: " + size);
+      $("#infoDivInner").html("Location found!<br>Number of store(s) within " + rmiles + " miles of your location: " + size);
       $("#storeinfo").show();
     })
     }); //end on ready function
