--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
       "Grayscale"     : cartodbLight
     };
     
-    var layerControl = new L.control.layers(basemaps, null).addTo(map);
+    var layerControl = new L.control.layers(baselayers, null).addTo(map);
       
     //end basic map
 
