--- a/index.html
+++ b/index.html
@@ -462,7 +462,10 @@
       console.log(within);
       var size = Object.keys(within.features._layers).length;
       console.log(size);
-      $("#infoDivInner").html("Location found!<br>Number of store(s) within " + rmiles + " miles of your location: " + size);
+      var nearest = turf.nearest(point, stores.toGeoJSON());
+      console.log(nearest);
+      $("#infoDivInner").html("Location found!<br>Number of store(s) within " + rmiles + " miles of your location: " + size + \
+                             "Your nearest store is...");
       $("#storeinfo").show();
     })
     }); //end on ready function
