--- a/index.html
+++ b/index.html
@@ -472,6 +472,7 @@
           fillOpacity: 0.5,
           radius: 50,
         }).addTo(map);
+        hasCircle = 1;
       }
       $("#storeinfo").show();
     })
