--- a/demo.html
+++ b/demo.html
@@ -452,8 +452,8 @@
         }));
       }); //end eachLayer
       
-          map.locate({
-      setVIew: true,
+    map.locate({
+      setView: true,
       maxZoom: 10
     });
     
