--- a/demo.html
+++ b/demo.html
@@ -11,14 +11,14 @@
   <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-locatecontrol/v0.43.0/css/font-awesome.min.css' rel='stylesheet' />
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <!--Google Maps API NO Key!! -->
-  <script src="https://maps.google.com/maps/api/js?v=3"></script>
+  <!--script src="https://maps.google.com/maps/api/js?v=3"></script-->
   <!--Leaflet 1.0.3-->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" />
   <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
   <!--Leaflet Plugins-->
   <link rel="stylesheet" type="text/css" href="assets/L.VisualClick.css" />
   <script src="assets/L.VisualClick.js"></script>
-  <script src='https://unpkg.com/leaflet.gridlayer.googlemutant@latest/Leaflet.GoogleMutant.js'></script>
+  <!--script src='https://unpkg.com/leaflet.gridlayer.googlemutant@latest/Leaflet.GoogleMutant.js'></script-->
   <script src='https://api.tiles.mapbox.com/mapbox.js/plugins/leaflet-omnivore/v0.2.0/leaflet-omnivore.min.js'></script>
   <script src='https://api.tiles.mapbox.com/mapbox.js/plugins/leaflet-hash/v0.2.1/leaflet-hash.js'></script>
   <script src='https://npmcdn.com/@turf/turf/turf.min.js'></script>
@@ -275,14 +275,14 @@
     var cartodbLight = L.tileLayer('https://cartodb-basemaps-{s}.global.ssl.fastly.net/light_all/{z}/{x}/{y}.png', {
       attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a> &copy; <a href="http://cartodb.com/attributions">CartoDB</a>',
       subdomains: 'abcd'
-    });
-    var googleStreets = L.gridLayer.googleMutant({
-      type: 'roadmap' // valid values are 'roadmap', 'satellite', 'terrain' and 'hybrid'
     }).addTo(map);
+//     var googleStreets = L.gridLayer.googleMutant({
+//       type: 'roadmap' // valid values are 'roadmap', 'satellite', 'terrain' and 'hybrid'
+//     }).addTo(map);
 
     //layer control
     var baselayers = {
-      "Google Street" : googleStreets,
+//       "Google Street" : googleStreets,
       "Grayscale"     : cartodbLight
     };
     
