--- a/demo.html
+++ b/demo.html
@@ -472,7 +472,7 @@
       var point = turf.point([e.longitude,e.latitude]);
       var within = turf.featureCollection(stores.eachLayer(function(store) {
         console.log(store);
-        if (turf.distance(turf.feature(store.feature.geometry), point, 'miles') <= range) return true;
+        if (turf.distance(turf.feature(store.feature.geometry), point, {units: 'miles'}) <= range) return true;
       }));
       console.log(within);
       var size = Object.keys(within.features._layers).length;
