--- a/demo.html
+++ b/demo.html
@@ -473,7 +473,7 @@
       var within = turf.featureCollection(stores.eachLayer(function(store) {
         console.log(store);
         var newpoint = turf.feature(store.feature.geometry);
-        console.log(turf.distance(newpoint, point, {units: 'miles'});
+        console.log(turf.distance(newpoint, point, {units: 'miles'}));
         if (turf.distance(newpoint, point, {units: 'miles'}) <= range) return true;
       }));
       console.log(within);
